--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<a href="json2tcx.html">JSON to TCX converter</a>
+<a href="json2tcx/index.html">JSON to TCX converter</a>
 </body>
 </html>
