publishing the sourdough calculator

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <a href="json2tcx/index.html">JSON to TCX converter</a>
+<a href="bread-calculator/index.html">Sourdough bread calculator</a>
 </body>
 </html>
