--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-<a href="json2tcx/index.html">JSON to TCX converter</a>
-<a href="bread-calculator/index.html">Sourdough bread calculator</a>
+<button href="json2tcx/index.html">JSON to TCX converter</button>
+<br>
+<button href="bread-calculator/index.html">Sourdough bread calculator</button>
 </body>
 </html>
