--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-<button href="json2tcx/index.html">JSON to TCX converter</button>
+<button onclick="document.location='json2tcx/index.html'">JSON to TCX converter</button>
 <br>
-<button href="bread-calculator/index.html">Sourdough bread calculator</button>
+<button onclick="document.location='bread-calculator/index.html'">Sourdough bread calculator</button>
 </body>
 </html>
