--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <body>
 <button onclick="document.location='json2tcx/index.html'">JSON to TCX converter</button>
 <br>
