--- a/json2tcx/index.html
+++ b/json2tcx/index.html
@@ -13,6 +13,10 @@ Upload a JSON file from Run4Gear to convert it to TCX. The TCX file download wil
 <div id="success" style="color:green">
 
 </div>
+<div>
+All the credit for the conversion code goes to <a href="https://twitter.com/run4gear"> Run4Gear </a>.
+</div>
 <script src="script.js"></script>
+
 </body>
 </html>
