css styling nonsense

--- a/json2tcx/index.html
+++ b/json2tcx/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
+<link rel="stylesheet" href="../style.css">
 <link rel="stylesheet" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 Upload a JSON file from Run4Gear to convert it to TCX. The TCX file download will start automatically.
 <br>
-<input type="file" id="file-selector" accept=".json">
+<input class="custom-file-input" type="file" id="file-selector" accept=".json">
 <div id="error" style="color:red">
 
 </div>
