--- a/bread-calculator/index.html
+++ b/bread-calculator/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form id="calculator" onload="getCookies">
+<form id="calculator" onload="getCookies()">
 Flour: <span id="flour_amount">500 g</span> <input type="range" class="slider" name="flour" oninput="recalculate()" min=0 max=1000>
 
 <br>
